[package]
name = "day1"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "x3dh_server"
path = "src/bin/server.rs"

[[bin]]
name = "x3dh_client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
tungstenite = "0.23"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
http = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
tokio-stream = "0.1"
futures-util = "0.3"
